...
                                            <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </imageView>
                                    </subviews>
                                </tableViewCellContentView>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ReviewTimeline" textLabel="EoX-9k-pQx" style="IBUITableViewCellStyleDefault" id="JeI-YQ-D7v">
                                <rect key="frame" x="0.0" y="361.33333333333337" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JeI-YQ-D7v" id="Ifn-xP-sPm">
                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.666666666666664"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
...
                        <connections>
                            <outlet property="dataSource" destination="jxu-8X-TGG" id="sb8-Lg-doT"/>
                            <outlet property="delegate" destination="jxu-8X-TGG" id="TKJ-ga-DhX"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Dashboard" id="xk1-wl-s5j">
                        <barButtonItem key="rightBarButtonItem" image="Settings" id="CCJ-3i-Y8C">
                            <connections>
                                <segue destination="q4M-gJ-CLU" kind="show" identifier="Settings" id="f5a-at-jln"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="16" id="Axp-w3-Ikn"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="251" text="Kanji" textAlignment="natural" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutores
                                            <rect key="frame" x="304.66666666666669" y="27.333333333333329" width="25.333333333333314" height="14"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                            <color key="textColor" name="Colours/Kanji"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="000" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21D-kG-HuW">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="vaj-6l-6LH" id="62q-mw-vB9"/>
                            <outlet property="delegate" destination="vaj-6l-6LH" id="Aqp-cg-PeK"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Review Timeline" largeTitleDisplayMode="never" id="Jjt-qP-qW1">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="TPh-kp-2Aq">
                            <connections>
                                <segue destination="D48-SX-sNZ" kind="popoverPresentation" identifier="ReviewTimelineFilter" popoverAnchorBarButtonItem="TPh-kp-2Aq" id="tii-Ka-HW3">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES"/>
                                </segue>
                            </connections>
...
