...
                                                    <connections>
                                                        <action selector="loginButtonTapped" destination="XBa-nN-Rj0" eventType="touchUpInside" id="NMA-j1-rKr"/>
                                                    </connections>
                                                </button>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="2U9-D2-Fff">
                                                    <rect key="frame" x="73.5" y="47" width="212" height="33"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="ManualAPIKeyEntry"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                    <state key="normal" title="I know my API version 2 key"/>
                                                    <connections>
                                                        <segue destination="bpG-Gj-LvF" kind="show" identifier="" id="STq-fY-U6h"/>
                                                    </connections>
                                                </button>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO
                                                <rect key="frame" x="20" y="170.5" width="335" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="EnterAPIKey"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
...
                            <constraint firstItem="WdR-jN-zZi" firstAttribute="width" secondItem="ZUe-hC-VDd" secondAttribute="width" id="ZfR-y6-Xsg"/>
                            <constraint firstItem="T8O-jJ-a6u" firstAttribute="centerY" secondItem="Yf9-aS-lc0" secondAttribute="centerY" id="kWt-NE-4LG"/>
                            <constraint firstItem="ZUe-hC-VDd" firstAttribute="leading" secondItem="byM-Ce-NTV" secondAttribute="leading" id="yO2-sw-JLX"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="byM-Ce-NTV"/>
                    </view>
                    <navigationItem key="navigationItem" title="Enter API Key" largeTitleDisplayMode="always" id="iOp-JE-BDU">
                        <barButtonItem key="rightBarButtonItem" enabled="NO" style="done" systemItem="done" id="PI0-M0-1pf">
                            <connections>
                                <action selector="done:" destination="bpG-Gj-LvF" id="1QE-3j-vfP"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
