...
            }
            """.data(using: .utf8)
        fileManager.createFile(atPath: destinationBaseURL.appendingPathComponent("Contents.json").path, contents: imagesetContents, attributes: nil)
    }
}

print("Done")
PlaygroundPage.current.finishExecution()

