...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="vdB-mD-3hr">
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                            <state key="normal" title="Log in to WaniKani"/>
                                            <connections>
                                                <action selector="loginButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EfR-JL-eyh"/>
...
        <scene sceneID="dJH-9y-fFn">
            <objects>
                <tableViewController title="Dashboard" id="mG4-eZ-32n" customClass="DashboardViewController" customModule="AlliCrab" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="i30-M3-Xn0">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09X-aB-f1i">
                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="24"/>
                                                    <nil key="highlightedColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="All Upcoming Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gPJ-Up-ctL">
                                                    <frame key="frameInset" minX="15" width="325" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kx4-iW-LLQ">
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kanji" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usO-Vw-jHN">
                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                            <nil key="highlightedColor"/>
...
        <scene sceneID="GGt-2I-PYg">
            <objects>
                <tableViewController title="Review Timeline" id="vj5-vi-TN2" customClass="ReviewTimelineTableViewController" customModule="AlliCrab" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" id="X7a-yk-rNr">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
